--- a/Introduction/tic-tac-toe/experiments.ipynb
+++ b/Introduction/tic-tac-toe/experiments.ipynb
@@ -122,8 +122,7 @@
     "            if val < 0.49:\n",
     "                player.estimations[key] = 0\n",
     "            elif val > 0.50:\n",
-    "                player.estimations[key] = 1\n",
-    "        "
+    "                player.estimations[key] = 1"
    ]
   },
   {
@@ -191,7 +190,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -202,5 +201,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
